# qtmem0ry

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  aboutdialog.ui  animatedwidget.cpp  animatedwidget.h  datafetcher.cpp  datafetcher.h  downloadhandler.cpp  downloadhandler.h  gamescene.cpp  gamescene.h  keyvaluetablemodel.cpp  keyvaluetablemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memorycard.cpp  memorycard.h  memorypanel.cpp  memorypanel.h  resources.qrc  setup  util.cpp  util.h
